# hse-serialization

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md
cmake/: FindLibnop.cmake
include/: color.hpp  planet.hpp  portal.hpp  random.hpp  world.hpp
report/: data.csv  visualization.ipynb
src/: color.cpp  input_handler.cpp  input_handler.hpp  main.cpp  planet.cpp  portal.cpp  random.cpp  world.cpp
test/: CMakeLists.txt  test_runner.hpp  tests.cpp
