message("CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
message("CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
message("CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
message("CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")
message("CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")

add_executable(${PROJECT_NAME}-test tests.cpp test_runner.hpp)

target_compile_features(${PROJECT_NAME}-test PRIVATE cxx_std_20)

set_target_properties(${PROJECT_NAME}-test PROPERTIES CXX_EXTENSIONS OFF)

target_link_libraries(${PROJECT_NAME}-test PRIVATE ${PROJECT_NAME}-lib)

add_test(NAME ${PROJECT_NAME}-test  COMMAND ${PROJECT_NAME}-test)

